[package]
name = "datafusion"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2018"
description = "Re-exports datafusion at a specific version"

[dependencies]

# Rename to workaround doctest bug
# Turn off optional datafusion features (function packages)
upstream = { git = "https://github.com/apache/arrow-datafusion.git", rev = "03cfcb26ad6a566dc6fabe6f93e4f3b3d416432d", default-features = false, package = "datafusion" }
#upstream = { path = "/Users/alamb/Software/arrow-datafusion/datafusion", default-features = false, package = "datafusion" }
